--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 
   {
-      "name": "University Class Timetable App",
+      "name": "University Class Timetable App (Copy)",
       "version": "0.1.0",
       "private": true,
       "dependencies": {
